--- a/day01/05.html
+++ b/day01/05.html
@@ -5,6 +5,10 @@
 	<title>键盘事件</title>
 </head>
 <body>
+	<div id="box">
+		<!-- @keydown,@keypress,@keyup -->
+		用户名: <input type="text" >
+	</div>
 	<script src="../bower_components/vue/dist/vue.js"></script>
 </body>
 </html>
