--- a/day01/05.html
+++ b/day01/05.html
@@ -7,8 +7,21 @@
 <body>
 	<div id="box">
 		<!-- @keydown,@keypress,@keyup -->
-		用户名: <input type="text" >
+		用户名: <input type="text" @keydown="show($event)">
 	</div>
 	<script src="../bower_components/vue/dist/vue.js"></script>
+	<script>
+		new Vue({
+			el:'#box',
+			methods:{
+				show(e){
+					// console.log(e.keyCode);
+					if(e.keyCode ==13){
+						console.log("你按了回车键")
+					}
+				}
+			}
+		})
+	</script>
 </body>
 </html>
