--- a/day01/04.html
+++ b/day01/04.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>阻止事件冒泡</title>
+	<title>阻止事件冒泡和默认行为</title>
 </head>
 <body>
 	<div id="box" >
