--- a/day03/组件间数据的传递.html
+++ b/day03/组件间数据的传递.html
@@ -14,15 +14,18 @@
 		<div>
 			<h2>这是hello父组件</h2>
 			<h2>{{msg}},{{name}},{{age}}岁,{{user.username}}</h2>
+			<h1>访问子组建的数据：{{sex}},{{height}}</h1>
 			<hr>
 			<!-- 子组件只能在父组件内使用 -->
-			<my-world :message="msg" :age="age"></my-world>
+			<my-world :message="msg" :age="age" :name="name"  @e-world="getData"></my-world>
 		</div>
 	</template>
 	<template id="world">
 		<div>
 			<h4>这是world子组件</h4>
-			<h2>{{message}}</h2>
+			<h2>{{message}},{{age}},{{name}},{{uname}}</h2>
+			<h1>子组建的数据{{sex}},{{height}}</h1>
+			<button @click="send">将子组件的数据向上传递给父组件</button>
 		</div>
 	</template>
 	<script>
@@ -34,18 +37,60 @@
 			components:{
 				'my-hello':{
 					template:'#hello',
+					methods:{
+						getData(sex,height){
+							this.sex = sex;
+							this.height = height;
+						}
+					},
 					data:()=>{
 						return {
 							msg:'1865 E9',
 							name:'alice',
 							age:22,
-							user:{'id':9527,username:'秋香'}
+							user:{'id':9527,username:'秋香'},
+							sex:'',
+							height:0
 						}
 					},
-					components:{
+					components:{//数据形式，data,props,computed
 						'my-world':{
 							template:'#world',
-							props:['message']
+							data:()=>{
+								return {
+									sex:'female',
+									height:180
+								}
+							},
+							methods:{
+								send(){
+									// console.log(this);  //此处的this表示当前子组件实例
+									this.$emit('e-world',this.sex,this.height); //使用$emit()触发一个事件，发送数据
+								}
+							},
+							// props:['message','age','name','uname']//简单的字符串数组
+							props:{//也可以是对象，允许配置高级设置。如类型判断，数据校验，设置默认值
+
+								message:String,
+								name:{
+									type:String,
+									required:true
+								},
+								age:{
+									type:Number,
+									default:18,
+									validate:function(value){
+										return value>0
+									}
+								},
+								uname:{
+									type:Object,
+									// default:{id:'1102',username:'jack'}
+									default:function(){//对象或者是数组的默认值必须使用函数de形式来返回
+										return {id:'1102',username:'jack'}
+									}
+								}
+							}
 						},
 					}
 				}
